--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.2.1",
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.6.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
