--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@madzadev/audio-player": "^1.1.11",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
-    "fetch": "^1.1.0",
-    "node-fetch": "^2.6.7",
     "axios": "^1.2.1",
+    "fetch": "^1.1.0",
+    "howler": "^2.2.3",
+    "node-fetch": "^2.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.3",
